ajout d'un exemple